# deepseek-coder

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.cargo/: config.toml
.github/workflows/: ci.yml
crates/agent-core/: Cargo.toml
crates/agent-core/src/: approval.rs  cancellation.rs  command_risk.rs  context.rs  hashing.rs  lib.rs  reasoning.rs  run_log.rs  token_estimator.rs  tool.rs  tool_execution.rs  turn_loop.rs  workspace_manifest.rs
crates/agent-core/src/provider/: deepseek_api.rs  mod.rs
crates/agent-core/src/test_helpers/: live.rs  mod.rs  workspace.rs
crates/agent-core/tests/: context_capsule_benchmark.rs  deepseek_api_live.rs
crates/agent-rpc/: Cargo.toml
crates/agent-rpc/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs  main.rs
crates/cli/tests/: agent_interaction_demo.rs  deepseek_cli_live.rs  run_smoke.rs
crates/tui/: Cargo.toml
crates/tui/src/: lib.rs  main.rs
docs/: README.md  agent-core.md  approval-model.md  architecture.md  cli.md  context-capsule.md  deepseek-api-adapter.md  demos.md  json-rpc-protocol.md  phase-tasks.md  reasoning-content.md  release.md  roadmap.md  rpc-server.md  run-log.md  security-model.md  testing.md  tool-system.md  tui.md  turn-loop.md  vscode-extension.md
docs/adr/: 0001-use-rust-and-typescript.md  0002-use-pnpm-workspace.md  0003-use-agpl-3.0-or-later.md  0004-use-json-rpc-between-frontends-and-core.md  0005-keep-readme-as-entrypoint-and-move-design-to-docs.md  0006-provider-capability-data-contract.md
docs/protocol/: event-payloads.v1.json  tool-registry.v1.json
vscode/extension/: .vscodeignore  README.md  package.json  tsconfig.json  tsconfig.test.json
vscode/extension/scripts/: packageAlphaVsix.mjs  runVscodeIntegrationTests.mjs  vsixDryRunSmoke.mjs
vscode/extension/src/: approvalFlow.ts  chatEvents.ts  chatInput.ts  chatView.ts  commands.ts  contextViz.ts  diagnostics.ts  diffPreview.ts  extension.ts  fimPreview.ts  fimPreviewVscode.ts  patchPreview.ts  rpcServer.ts  runHistory.ts
vscode/extension/test/: approvalFlow.test.ts  chatEvents.test.ts  chatInput.test.ts  commands.test.ts  contextViz.test.ts  diagnostics.test.ts  fimPreview.test.ts  patchPreview.test.ts  rpcServer.test.ts  runHistory.test.ts
vscode/extension/test/electron/: index.ts
vscode/extension/test/fixtures/: rpcFixtureServer.mjs
