[workspace]
resolver = "3"
members = [
    "crates/agent-core",
    "crates/agent-rpc",
    "crates/cli",
    "crates/tui",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
publish = false

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
unwrap_used = "deny"
