[package]
name = "prole-coder-agent-rpc"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
prole-coder-agent-core = { path = "../agent-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt", "time"] }

[lints]
workspace = true
