[package]
name = "deepseek-coder-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "deepseek-coder"
path = "src/main.rs"

[dependencies]
deepseek-coder-agent-core = { path = "../agent-core" }
deepseek-coder-agent-rpc = { path = "../agent-rpc" }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["net", "rt-multi-thread", "time"] }

[lints]
workspace = true
